"""
This module contains build dependency for PythonCpp.
"""

module(
    name = "z_python_cpp",
    version = "1.0.0",
)

# Bazel extensions for pybind11
bazel_dep(name = "pybind11_bazel", version = "2.12.0")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_shell", version = "0.2.0")
bazel_dep(name = "rules_python", version = "0.34.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

bazel_dep(name = "protobuf", version = "27.1", repo_name = "com_google_protobuf")
bazel_dep(name = "googletest", version = "1.14.0", repo_name = "com_google_googletest")

internal_configure = use_extension("//:internal_configure.bzl", "internal_configure_extension")
use_repo(internal_configure, "pybind11")
